load geometry from obj file

--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -17,14 +17,13 @@
     <meta name="MobileOptimized" content="320" />
     <meta http-equiv="cleartype" content="on" />
 
-    <title>Elm Docs Preview</title>
+    <title>WebGL - AR Room</title>
 
     <link rel="apple-touch-icon" sizes="76x76" href="/app-icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/app-icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/app-icons/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/app-icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
     <meta name="theme-color" content="#ffffff">
 
     <!-- TODO: maybe self host these assets -->
@@ -34,8 +33,6 @@ body {
   background-color: #dedede;
 }
 </style>
-
-    <script src="http://package.elm-lang.org/assets/highlight/highlight.pack.js?1495720958"></script>
   </head>
   <body>
     <script>
